bucket hat draft

--- a/src/app/[lang]/[slug]/page.module.css
+++ b/src/app/[lang]/[slug]/page.module.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: 9.5rem;
 
-  color: var(--color-teritary);
+  color: var(--color-tertiary);
 }
 
 .title {
@@ -22,4 +22,18 @@
   display: flex;
   flex-direction: column;
   /* align-items: center; */
+}
+
+.MDXWrapper > p {
+  line-height: 180%;
+}
+
+.MDXWrapper li {
+  line-height: 150%;
+}
+
+.MDXWrapper img {
+  width: 100%;
+  height: auto;
+  border-radius: var(--border-radius);
 }
