--- a/src/app/styles/codeBlockStyle.css
+++ b/src/app/styles/codeBlockStyle.css
@@ -7,7 +7,7 @@ Original Base16 color scheme by Chris Kempson (https://github.com/chriskempson/b
 */
 
 pre[class*="language-"] {
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   border: 1px var(--border-color) solid;
 }
 
@@ -64,7 +64,7 @@ pre[class*="language-"] {
 /* Inline code */
 :not(pre) > code[class*="language-"] {
   padding: 0.1em;
-  border-radius: 0.3em;
+  border-radius: var(--border-radius);
 }
 
 .token.comment,
