--- a/src/app/[lang]/page.module.css
+++ b/src/app/[lang]/page.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: var(--color-primary);
+  color: var(--color-1);
   width: fit-content;
   margin: 3rem 0;
 }
@@ -10,7 +10,7 @@
 .date {
   font-size: 0.8rem;
   margin-right: 0.8rem;
-  color: var(--color-secondary);
+  color: var(--color-2);
 }
 
 .titleWrapper {
