--- a/src/app/[lang]/[slug]/content/bucket-hat/bucketHat.module.css
+++ b/src/app/[lang]/[slug]/content/bucket-hat/bucketHat.module.css
@@ -8,6 +8,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-block: 1rem;
+}
+
+.latex {
+  text-align: center;
+  margin-block: 1rem;
 }
 
 .inputWrapper {
@@ -18,6 +24,12 @@
   margin-inline: auto;
   grid-template-columns: 30% 70%;
 }
+
+.inputWrapper label {
+  color: var(--color-2);
+  font-weight: 600;
+}
+
 /*********** Baseline, reset styles ***********/
 .inputWrapper input[type="range"] {
   -webkit-appearance: none;
@@ -36,7 +48,7 @@
 .inputWrapper input[type="range"]::-webkit-slider-runnable-track {
   background-color: var(--background-tetiray);
   border-radius: 0.5rem;
-  height: 0.5rem;
+  height: 0.25rem;
 }
 
 /* slider thumb */
@@ -44,7 +56,7 @@
   -webkit-appearance: none; /* Override default look */
   appearance: none;
   margin-top: -4px; /* Centers thumb on the track */
-  background-color: var(--color-secondary);
+  background-color: var(--color-2);
   border-radius: 0.5rem;
   height: 1rem;
   width: 1rem;
@@ -58,12 +70,12 @@
 .inputWrapper input[type="range"]::-moz-range-track {
   background-color: var(--background-tetiray);
   border-radius: 0.5rem;
-  height: 0.5rem;
+  height: 0.25rem;
 }
 
 /* slider thumb */
 .inputWrapper input[type="range"]::-moz-range-thumb {
-  background-color: var(--color-secondary);
+  background-color: var(--color-2);
   border: none; /*Removes extra border that FF applies*/
   border-radius: 0.5rem;
   height: 1rem;
