--- a/src/app/[lang]/components/HoverUnderline/HoverUnderline.module.css
+++ b/src/app/[lang]/components/HoverUnderline/HoverUnderline.module.css
@@ -11,7 +11,7 @@
   margin: 0 auto;
 
   height: 5px;
-  background-color: var(--color-primary);
+  background-color: var(--color-1);
   width: 0%;
 
   transition: width 0.6s ease;
