--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @import "katex/dist/katex.min.css";
 
 :root {
-  --background: white;
+  --background: #f2f2f2;
   --background-secondary: #eee;
   --background-tetiray: #b7b7b7;
   --color-1: black;
@@ -125,7 +125,7 @@ li {
 }
 
 .sp-wrapper {
-  --width: min(120%, calc(100vw - (var(--inline-margin))));
+  --width: min(140%, calc(100vw - (var(--inline-margin))));
   width: var(--width) !important;
   align-self: center !important;
 }
