--- a/src/app/[lang]/[slug]/mdxStyles.css
+++ b/src/app/[lang]/[slug]/mdxStyles.css
@@ -32,6 +32,10 @@ h2 {
   margin: 2rem 0 0rem 0;
 }
 
+h3 {
+  margin: 2rem 0 0 0;
+}
+
 img {
   background: var(--bg-color);
   width: 100%;
@@ -45,7 +49,7 @@ code:not(pre code) {
   background: var(--bg-color);
   border-radius: var(--border-radius);
   border: 1px var(--border-color) solid;
-  padding: 4px 8px 4px;
+  padding: 2px 6px 2px;
   font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console",
     "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono",
     "Nimbus Mono L", "Courier New", Courier, monospace;
