added marblie page

--- a/src/app/[lang]/[slug]/mdxStyles.css
+++ b/src/app/[lang]/[slug]/mdxStyles.css
@@ -51,6 +51,20 @@ code:not(pre code) {
   border: 1px var(--border-color) solid;
   padding: 2px 6px 2px;
   font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console",
-    "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono",
-    "Nimbus Mono L", "Courier New", Courier, monospace;
+    "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono",
+    "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
+}
+
+figure {
+  margin: 0;
+}
+
+figcaption p {
+  margin: 0;
+}
+figcaption {
+  margin-top: 0.5rem;
+  margin-bottom: 0;
+  font-size: 0.9rem;
+  color: var(--color-3);
 }
